Add manifest and theme color meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>잔류 카페인 계산기</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="icon.png" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#2563eb" />
+  <link rel="apple-touch-icon" href="icon.png" />
   <style>
     :root {
       --bg: #f3f4f6;
