--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       <div class="header-row">
         <div>
           <h1>잔류 카페인 계산기</h1>
-          <div class="subtitle">이전에 섭취한 카페인이 체내에 얼마나 누적되었을까요?<br>카페인 반감기에 기반하여 계산해보세요!</div>
+          <div class="subtitle">이전에 섭취한 카페인이 체내에 얼마나 남아있을까요?<br>카페인 반감기에 기반하여 계산해보세요!</div>
         </div>
       </div>
 
